# headsup

./: .gitignore  Cargo.toml  Dockerfile  PERFORMANCE_PLAN.md  README.md
.github/workflows/: docker.yml
src/: error.rs  main.rs  ui.rs
src/claude/: mod.rs  process.rs  prompt.rs  response.rs
src/cli/: check.rs  config_cmd.rs  history.rs  init.rs  mod.rs  notify.rs  state_cmd.rs  subjects.rs
src/config/: mod.rs  types.rs
src/email/: ics.rs  mod.rs  templates.rs
src/perplexity/: mod.rs  process.rs
src/state/: lock.rs  mod.rs  types.rs
